[metadata]
name = chamberlain
author = Behance
author_email = qeops-behance@adobe.com
summary = Manage Jenkins using YAML & GitHub
description-file = README.md
license = Apache License, Version 2.0
home-page = https://github.com/behance/chamberlain
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    chamberlain

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    chamberlain=chamberlain.cli.driver:main
